; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_sess.c_httpd_sess_free_ctx.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_sess.c_httpd_sess_free_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @httpd_sess_free_ctx(i8* %0, i32 (i8*)* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32 (i8*)*, align 8
  store i8* %0, i8** %3, align 8
  store i32 (i8*)* %1, i32 (i8*)** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %2
  %8 = load i32 (i8*)*, i32 (i8*)** %4, align 8
  %9 = icmp ne i32 (i8*)* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %7
  %11 = load i32 (i8*)*, i32 (i8*)** %4, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 %11(i8* %12)
  br label %17

14:                                               ; preds = %7
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @free(i8* %15)
  br label %17

17:                                               ; preds = %14, %10
  br label %18

18:                                               ; preds = %17, %2
  ret void
}

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
